...

private fun DrawScope.drawPolygonPath(points: List<RadarPoint>, color: Color, strokeWidth: Float, fill: Boolean, dashed: Boolean = false) {
    if (points.isEmpty()) return
    val path = Path().apply {
        moveTo(points[0].x, points[0].y)
        points.drop(1).forEach { lineTo(it.x, it.y) }
        close()
    }
    if (fill) {
        drawPath(path, color)
    } else {
        val effect = if (dashed) PathEffect.dashPathEffect(floatArrayOf(strokeWidth * 4, strokeWidth * 3)) else null
        drawPath(path, color, style = Stroke(width = strokeWidth, pathEffect = effect))
...
